JumpScript/tests/baselines/reference/memberScope.errors.txt
tests/cases/compiler/memberScope.jump(4,11): error TS2708: Cannot use namespace 'Basil' as a value.


==== tests/cases/compiler/memberScope.jump (1 errors) ====
    module Salt {
      export class Pepper {}
      export module Basil { }
      var z = Basil.Pepper;
              ~~~~~
!!! error TS2708: Cannot use namespace 'Basil' as a value.
    }
    
    